--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,17 @@
+html {
+  /*height: 100%;*/
+  /*overflow: hidden;*/
+  background: radial-gradient(ellipse at bottom, #1b2735 0%, #090a0f 100%);
+}
+
+h1 {
+  font-family: Lato;
+  letter-spacing: 5px;
+  color: #fff;
+  background: -webkit-linear-gradient(white, #38495a);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+}
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
